--- a/qurator/sbb_images/webapp_react/src/styles/AboutPage.css
+++ b/qurator/sbb_images/webapp_react/src/styles/AboutPage.css
@@ -20,6 +20,13 @@
   margin-top: 4rem;
   /* font-size: 1.5rem; */
   margin-bottom: 4rem;
+
+  @media (max-width: 469px) {
+    /* width: 80%; */
+    /* font-size: 0.5rem; */
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
 }
 
 /* .text-container{
