--- a/qurator/sbb_images/webapp_react/src/styles/InterruptedLine.css
+++ b/qurator/sbb_images/webapp_react/src/styles/InterruptedLine.css
@@ -9,6 +9,6 @@
     content: "";
     flex: 1 0 0;
     height: 1px;
-    background-color: #cbd5e1;
+    background-color: #BCC0CA; /*SPK-Grau 50*/
     margin: 0 10px;
 }
