--- a/qurator/sbb_images/webapp_react/src/styles/AboutPage.css
+++ b/qurator/sbb_images/webapp_react/src/styles/AboutPage.css
@@ -1,4 +1,6 @@
-/* To clean and improve */
+*{
+  line-height: 1.5rem;
+}
 
 .about-page {
   min-height: 100vh;
@@ -18,47 +20,33 @@
 
 .about-content h2 {
   margin-top: 4rem;
-  /* font-size: 1.5rem; */
-  margin-bottom: 4rem;
+  margin-bottom: 4rem; 
 
   @media (max-width: 469px) {
-    /* width: 80%; */
-    /* font-size: 0.5rem; */
     margin-top: 1rem;
     margin-bottom: 2rem;
   }
 }
 
-/* .text-container{
-  width: 100%;
-} */
-
 .main-text {
-   width: 80%; 
-  /* max-width: 1200px; */
-  background-color: #f1f5f9;
-  padding: 5rem;
+  width: 80%; 
 }
 
 .main-text p {
   margin-bottom: 2rem;
-  line-height: 1.5;
 }
 
 .list-with-example {
   display: flex;
-  /* gap: 5rem; */
   margin: 4rem 0 4rem 0;
 }
 
 .list-content {
-   flex: 1; 
-   /* padding: 0 2rem; */
+  flex: 1; 
 }
 
 .list-content ul {
   list-style: none;
-  /* margin: 2rem 0 2rem 0; */
   padding: 1rem 2rem;
 }
 
@@ -77,12 +65,12 @@
 }
 
 .main-text a {
-  color: #2f3e6a;
-  /* text-decoration: none; */
+  color: #2B4474; /* SPK-Blau 100 */
+  /* text-decoration: none;  */
 }
 
 .main-text a:hover {
-  color: #1c2641;
+  color: #182645; /* SPK-Blau 150 */
   /* text-decoration: underline; */
 }
 
@@ -93,16 +81,15 @@
   align-items: center;
   flex-direction: column;
   gap: 1rem;
-  background-color: white;
+  background-color: #FFFFFF;
+  border: 2px solid #D6D8DF; /* SPK Grau 30*/
   padding: 2rem 1rem;
   height: fit-content;
-  border-radius: 2rem;
-  /* outline: 1px solid #2f3e6a; */
-  /* margin-left: 1rem; */
+  /* border-radius: 1rem; */
 }
 
 .example-section .image-card {
-  border: 1px solid #cbd5e1;
+  border: 1px solid #D6D8DF; /* SPK Grau 30*/
   border-radius: 0.1em;
   display: grid;
   grid-template-rows: auto auto auto;
@@ -115,15 +102,12 @@
 }
 
 .example-section .image-card:hover{
-    /* border: 1px solid #94a3b8; */
-    border: 1px solid #2f3e6a;
-    /* background-color: #e2e8f0; darker grey on hover */
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+  border: 1px solid #000000;
 }
 
 .example-section .image-container {
   grid-row: 1;
-  background-color: #f1f5f9;
+  background-color: #F0F0F3; /* SPK-Grau 10*/
   border-radius: 0.1em 0.1em 0 0;
   max-width: 100%;
   max-height: 100%;
@@ -136,7 +120,7 @@
 }
 
 .example-section  .image-card:hover .image-container {
-  background-color: #e2e8f0;
+  background-color: #E3E4E9; /* SPK-Grau 20*/
 }
 
 .example-section .card-image {
@@ -150,31 +134,38 @@
 
 .example-section .title-wrapper {
   height: 3.6em;
-  line-height: 1.8em;
+  line-height: 1.5em; /* used to be 1.8, why?*/
   overflow: hidden;
   margin: 0 auto;
   /* padding: 0 0.7em 0 0.7em; */
 }
+
+.example-section .image-card a {
+  color: #2B4474;
+} 
+
+.example-section  .image-card a:hover {
+  color: #182645;
+} 
 
 .example-caption {
   margin-top: 1rem;
   margin-bottom: 0;
   text-align: left;
   font-size: 1rem;
-  line-height: 1.4; 
+  /* line-height: 1.4;  */
 }
 
 .notice {
-  background-color: white;
-  border: 1px solid #8f243e ;
-  padding: 1.5rem;
+  background-color: #E2E2F2; /* Lavendel 30 */
+  padding: 1.5rem 3rem;
   margin: 4rem 0;
-  border-radius: 2rem;
 }
 
 .notice h3 {
-  color: #8f243e;
+  color: #000000;
   margin-bottom: 1rem;
+  padding-top: 1.5rem;
 }
 
 .links {
@@ -185,12 +176,12 @@
 }
 
 .links a {
-  color: #2f3e6a;
+  color: #2B4474; /* SPK-Blau 100 */
   text-decoration: none;
   font-weight: 700;
 }
 
 .links a:hover {
-  color: #1c2641;
+  color: #182645; /* SPK-Blau 150 */
   text-decoration: underline;
 }
