--- a/qurator/sbb_images/webapp_react/src/styles/SearchResultsPage.css
+++ b/qurator/sbb_images/webapp_react/src/styles/SearchResultsPage.css
@@ -1,5 +1,3 @@
-/* To clean up and improve */
-
 .search-results-page {
     padding-top: 5rem;
     display: flex;
@@ -8,27 +6,20 @@
     justify-content: center;
   }
   
-  .search-results-page h2 {
-    margin-top: 4rem; 
-    margin-bottom: 4rem;
-  }
-
-.query {
-  width: 100%;
+.search-page-title{
+    margin-top: 4rem;  
+    margin-bottom: 4rem; 
 }
 
-/* .query h3 {
-  width: 80%;
-} */
+.query {
+    width: 100%;
+}
 
-/* .browse-search {
-  width: 80%;
-  margin: 0 auto 0.5rem auto;
-} */
   
-  .query-image-container {
-    background-color: #f1f5f9; 
-    border-top: 1px solid #8f243e;
+.query-image-container {
+    background-color: #F0F0F3; /*SPK-Grau 10*/
+    border-top: 1px solid #D6D8DF; /* SPK Grau 30*/
+    border-bottom: 1px solid #D6D8DF; /* SPK Grau 30*/;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,16 +27,12 @@
     padding: 2rem;
     height: auto;
     width: 100%;
-    /* height: 100%; */
-    /* margin: 20px 0; */
     margin-bottom: 4rem;
   }
     
   .query-image {
     max-width: 5vw;
     height: 5vh;
-    /* max-width: 50%;
-    max-height: 50%; */
     height: auto;
     object-fit: contain;
     display: block;
@@ -59,18 +46,19 @@
     width: 100%;
     height: auto;
     margin: 0 auto;  
+    margin-bottom: 3rem;  
   }
 
   .search-results-container {
     width: 80%;
-    /* max-width: 1240px;  */
     margin: 0 auto;
+    margin-bottom: 3rem; 
     height: auto;
   }
 
 
   .result-card {
-    border: 1px solid #cbd5e1;
+    border: 1px solid #D6D8DF; /* SPK Grau 30*/
     border-radius: 0.1em;
     display: grid;
     grid-template-rows: auto auto auto;
@@ -84,7 +72,7 @@
   
   .result-card .image-container {
     grid-row: 1;
-    background-color: #f1f5f9;
+    background-color: #F0F0F3; /* SPK-Grau 10*/
     border-radius: 0.1em 0.1em 0 0;
     max-width: 100%;
     max-height: 100%;
@@ -115,27 +103,24 @@
   
   .result-card .view-link {
     padding: 0.5em 0.5em;
-    color: #2f3e6a;
+    color: #2B4474; /* SPK-Blau 100 */
     margin: auto;
-    /* text-decoration: none; */
     font-size: 1rem;
-    line-height: 1.4;
+    line-height: 1.5;
   }
   
   .result-card:hover {
-    /* border: 1px solid #94a3b8; */
-    border: 1px solid #2f3e6a;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    border: 1px solid #000000;
+    /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3); */
   }
 
   .result-card:hover .image-container {
-    background-color: #e2e8f0;
+    background-color: #E3E4E9; /* SPK-Grau 20*/
   }
   
-  .search-results-container {
-    /* margin-top: 20px; */
-    /* margin-top: 1em; */
-  }
+  /* .search-results-container {
+    
+  } */
 
    .results-heading {
     /* width: 80%; */
@@ -143,29 +128,21 @@
     text-align: left;
     font-size: 1rem;
   } 
-  
-  .user-search-image {
-    background-color: grey;
-    padding: 20px;
-    margin-bottom: 20px;
+
+  .imgLoader {
+    width: 60px;
+    aspect-ratio: 4;
+    background: radial-gradient(circle closest-side,#657098 90%,#0000) 0/calc(100%/3) 100% space;
+    clip-path: inset(0 100% 0 0);
+    animation: l1 1s steps(4) infinite;
   }
-  
-  .user-search-image h3 {
-    margin-bottom: 10px;
-  }
-  
-  .user-search-image img {
-    max-width: 100%;
-  }
-  
-  .search-text {
-    margin-bottom: 20px;
-  }
+  @keyframes l1 {to{clip-path: inset(0 -34% 0 0)}}
   
   .results-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    /* gap: 20px; */
+    gap: 1em; 
   }
   
   .result-item img {
@@ -204,5 +181,71 @@
 .cropper-point {
   background-color: #39f;
   opacity: 0.75;
+}
+/* 
+.batch-loader {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: relative;
+  margin: 20px auto;
+}
+
+.batch-loader:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 8px solid #657098;
+  border-radius: 50%;
+  border-top-color: transparent;
+  animation: l3 1s infinite linear;
+}
+
+.batch-loader-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+}
+
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+ */
+
+ .batch-loader {
+  /* width: 50px; */
+  width: 3rem;
+  /* padding: 8px; */
+  padding: 0.5rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #657098;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+  margin: 20px auto;
+}
+
+.batch-loader-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+}
+
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
 }
   
