--- a/qurator/sbb_images/webapp_react/src/styles/Tabs.css
+++ b/qurator/sbb_images/webapp_react/src/styles/Tabs.css
@@ -1,12 +1,11 @@
-/* To clean up and improve! */
+*{
+    line-height: 1.5rem;
+}
 
 .Search {
     width: 100%;
     height: auto;
     margin-bottom: 3rem;
-    /* this is such that the container 
-  adapts to different sizes of the tab outlet without overlapping 
-  other elements */
 
      @media (max-width: 769px) {
         padding: 2rem 0;
@@ -18,7 +17,6 @@
 /* Tab Container */
 
 .Tabs {
-    /* background-color: red; */
     position: relative;
     display: flex;
     padding: 4rem;
@@ -26,12 +24,9 @@
     align-items: center;
     margin: 0;
     flex-wrap: nowrap;
-
-    /* width: 100%; */
-   
     height: 100%;
-    background: #f1f5f9;
-    border-top: 1px solid #8f243e;
+    background-color: #F0F0F3; /*SPK-Grau 10*/
+    border-top: 1.5px solid #EC6726; /* Verkehrsorange = UDL-Orange */
 
     @media (max-width: 769px) {
         display: flex;
@@ -42,9 +37,8 @@
 }
 
 .SearchTabs {
-    /* background-color: aqua; */
     width: 60%;
-/* Need to add more of these, doesn't do responsive yet */
+
     @media (max-width: 769px) {
         width: 100%;
     }
@@ -53,7 +47,6 @@
 /* Tab Navigation */
 
 ul.nav {
-    /* background-color: red; */
     left: 8%;
     margin-bottom: 0.7rem;
 
@@ -74,79 +67,62 @@ ul.nav {
     outline: none;
 }
 
-/* ============================================================== */
-/* Styling the ImageTab as drag & drop */
+/* ============================================================= */
+/*             Styling the ImageTab as drag & drop               */
 
 .ImageTab {
-    outline: 2px dashed #2f3e6a;
-    border-radius: 0.2rem;
-    background-color: #ffffff;
-    
-    /* width: 100%; */
-   
+    outline: 2px dashed #3C3C3C; /* Schwarz 90 */
+    border-radius: 0.5rem;
+    background-color: #FFFFFF; /* Weiß */
     height: 20rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 20px;
     transition: all 0.2s ease-in-out;
 }
 
 .ImageTab:hover{
-    background-color: #e2e8f0;
-    /* outline: 3px dashed #798cc3; */
-    outline: 3px dashed #1c1933;
+    background-color: #E3E4E9; /* SPK-Grau 20*/
+    outline: 3px dashed #000000;
 }
 
 .ImageTab.dragging {
-    background-color: #94a3b8;
-    /* change background when dragging */
+    background-color: #C9CCD5; /* SPK-Grau 40 */
     transition: background-color 0.15s ease-in-out;
 }
 
 
 .drag-area {
-    /* flex: 1;  */
     flex: 2;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
 .DDicon {
-    width: 8rem; 
+    width: 3rem; 
     height: auto;
-    margin-top: 1rem;
+    fill: #2B4474; /* SPK-Blau 100 */
+    /* margin-top: 1rem; */
+    
   }
-
-.DDicon g[clip-path] path {
-    fill: #312b59;
-    /* transition: fill 0.2s ease-in-out; */
-  }
-
-/* .DDicon path{
-    fill: currentColor;
-} */
 
 .Upload {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width: 100%; */
     background-color: transparent;
     border: none;
 }
 
 .UploadButton {
-    /* background-color: #ffffff; */
-    background-color: #312b59;
-    /* border: 1px solid #cbd5e1; */
-    /* color: #2f3e6a; */
-    color: #ffffff;
+    background-color: #3C3C3C; /*Schwarz 90*/
+    color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -155,27 +131,24 @@ ul.nav {
     border-radius: 0.5rem;
     cursor: pointer;
     font-size: 1rem;
-    /* transition: background-color 0.2s; */
     transition: all 0.2s ease-in-out;
 }
 
 .UploadButton:hover {
-    /* background-color: #cbd5e1; */
-    /* background-color: #ced5e9; */
-    background-color: #1c1933;
+    background-color: #000000;
 }
 
 .UploadButton:active {
-    outline: 5px solid #b1bcdd;
+    outline: 5px solid #3C3C3C; /*Schwarz 90*/
     outline-offset: -4px;
-    color:#312b59;
+    color: #000000;
   }
 
 .UploadButton:focus {
-    background-color: #ffffff;
-    outline: 5px solid #798cc3;
+    background-color: #FFFFFF;
+    outline: 5px solid #575757; /*Schwarz 80*/
     outline-offset: -4px;
-    color:#312b59;
+    color: #000000; 
   }
 
 .upload-icon {
@@ -187,23 +160,25 @@ ul.nav {
     fill: currentColor;
   }
 
-/* ============================================================== */
+/* ============================================================= */
 
 .DescriptionTab input,
 .PPNTab input {
-    border: 1px solid #2f3e6a;
-    color: #2f3e6a;
+    border: 1px solid #3C3C3C; /*Schwarz 90*/
+    color: #000000;
     padding: 1rem;
     outline: none;
-    /* border: none; */
     border-radius: 0.5rem;
     width: 100%;
     height: 100%;
-    /* height: 10px; */
     margin-bottom: 0.2rem;
     font-size: 1rem;
-    /* z-index: 4;*/
 }
+
+.DescriptionTab input::placeholder,
+.PPNTab input::placeholder {
+    color: #6F6F6F;
+} 
 
 /* .DescriptionTab input:not(:focus):hover,
 .PPNTab input:not(:focus):hover,
@@ -215,10 +190,11 @@ ul.nav {
 
 .DescriptionTab input:focus,
 .PPNTab input:focus,
-.DescriptionTab.active input,
-.PPNTab.active input {
-  outline: 5px solid #798cc3;
+.DescriptionTab input:active,
+.PPNTab input:active {
+  outline: 5px solid #575757; /*Schwarz 80*/
   outline-offset: -4px;
+  background-color: #FFFFFF;
 }
 
 /* .DescriptionTab input:hover,
@@ -227,13 +203,9 @@ ul.nav {
   outline-offset: -1px; 
 } */
 
-
-
 .error-message {
-    color: #8f243e; 
-    /* margin-top: 0.5rem; */
+    color: #D20A11; /* Verkehrsrot = UDL-Signalrot */
     text-align: left; 
-    /* font-size: 0.9rem; */
   }
 
 ul.nav {
@@ -244,21 +216,13 @@ ul.nav {
         position: relative;
         list-style: none;
         flex: 0 0 auto;
-
-        /* width: 10em; */
         text-align: center;
         width: 7em;
         display: inline-block;
-        /* display: inline-flex; 
-         justify-content: center;  
-         align-items: center;   */
-        /* padding: 0.7em 2em 0.5em; */
-        /* height: 3rem; */
         line-height: 1rem;
         padding: 0.2em;
         margin: 0 1em;
-        color: #fff;
-        /* color: #2f3e6a; */
+        color: #FFFFFF;
         text-decoration: none;
         /* margin: 0 0.1em; */
         /* margin: 0 2rem; */
@@ -266,10 +230,6 @@ ul.nav {
         transform: translateY(0.3rem);
         transition: all 0.2s ease-in-out; 
     }
-
-    /* &>li::before { */
-        /* border: 0.2em solid #fff; */
-    /* } */
 
     li::before {
         content: "";
@@ -280,79 +240,39 @@ ul.nav {
         left: 0;
         z-index: -1;
         margin: -0.5em;
-        /* z-index: -3; */
         border-bottom: none;
         border-radius: 0.4em 0.4em 0 0;
-        /* background: #a75000; */
         background: transparent;
         /* transition: background-color 0.2s ease-in-out; */
-        /*  transform: scale(1.2, 1.3) perspective(0.5em) rotateX(5deg); */
         transform: scale(1.1, 1.3) perspective(0.5em) rotateX(5deg);
     }
 }
 
-/* } */
-
 ul.nav li.imageTab::before {
-    background-color: #8a4200;
+    background-color: #2B4474; /* SPK Blau 100 */
 }
 
-/* ul.nav li.imageTab:hover::before {
-    background-color: #D66B09;
-} */
-
 ul.nav li.descriptionTab::before {
-    background-color: #a75000;
+    background-color: #505F8A; /* SPK Blau 80 */
 }
 
 ul.nav li.ppnTab::before {
-    background-color: #c26917;
+    background-color: #7981A5; /* SPK Blau 60 */
 }
 
 ul.nav li.active {
     z-index: 2;
-    color: #2f3e6a;
-    /* transform: translateY(0.5rem); */
+    color: #000000;
 
     &::before {
-        /* background-color: #2f3e6a; */
-        background-color: #ffffff;
+        background-color: #FFFFFF;
         margin-bottom: -0.08em;
+        border-top: #3C3C3C 1px solid; /* Schwarz 90 */
+        border-left: #3C3C3C 1px solid;
+        border-right: #3C3C3C 1px solid;
 
-        /* cursor: pointer; */
-        border-top: #2f3e6a 1px solid;
-        border-left: #2f3e6a 1px solid;
-        border-right: #2f3e6a 1px solid;
     }
-
-   /*  &:hover::before {
-        background-color: #b1bcdd;
-        margin-bottom: -0.08em;
-    } */
-
-    /* &:hover::before {
-    background-color: transparent;
-    margin-bottom: -0.08em;
-  } */
 }
-
-/* ul.nav li.descriptionTab.active {
-    z-index: 2;
-    color: #2f3e6a;
-
-    &::before {
-        background-color: #ffffff;
-        margin-bottom: -0.08em;
-        border-top: #2f3e6a 3px solid;
-        border-left: #2f3e6a 3px solid;
-        border-right: #2f3e6a 3px solid;
-    }
-
-    &:hover::before {
-        background-color: #1e2743;
-        margin-bottom: -0.08em;
-    }
-} */
 
 ul.nav li:not(.active)::before {
     margin-bottom: -0.08em;
@@ -361,22 +281,13 @@ ul.nav li:not(.active)::before {
 
 ul.nav li:not(.active):hover {
     transform: translateY(0);
-    /* margin-bottom: -3rem; */
 }
 
 ul.nav li:not(.active):hover::before {
-    background-color: #d66b09;
+    /* background-color: #ADAE29; */
+    background-color: #8B8E22; /* Olive 100 */
     transition: background-color 0.2s ease-in-out;
   }
-
-/* .tab-left-right {
-  ul.nav li::before {
-    transform-origin: bottom;
-  }
-  ul.nav {
-    padding-left: 1.3em;
-  }
-} */
 
 .ImageTab,
 .DescriptionTab,
@@ -384,33 +295,9 @@ ul.nav li:not(.active):hover::before {
     text-align: right;
 }
 
-/* ********************* */
-/* TO CHANGE FOR RESPONSIVE BEHAVIOUR !!!!!!!!!!!!!!!! */
-/* .info {
-    position: absolute;
-    right: 15rem;
-    top: 8rem;
-    transform: translateY(-50%);
-    background-color: #EDD058;
-    padding: 0.25rem 0.55rem;
-    border-radius: 50%;
+/* @media (max-width: 468px) {
 
-    @media (max-width: 768px) {
-        position: static;
-        margin-top: 0.3rem;
-        margin-left: 0;
-        font-size: 0.9rem;
-    }
 } */
-/* ********************* */
-
-@media (max-width: 468px) {
-    /* Adjust this breakpoint as needed */
-    /* .help-button { */
-    /* .info span{
-      content: "Help"; !important
-    } */
-}
 
 button {
     appearance: none;
@@ -423,16 +310,11 @@ button {
 /* Tablet Media Query */
 @media (max-width: 768px) {
     ul.nav li {
-        /* width: calc(33.33% - 2em); */
-        /* padding: 0.6em; */
-        /* margin: 0 1em; */
-        /* font-size: 1em; */
         margin-right: -1em;
     }
 
     ul.nav li::before {
         transform: scale(0.9, 1.1) perspective(0.5em) rotateX(5deg);
-        /* transform: scale(0.9, 1.1) perspective(0.4em) rotateX(5deg);  */
     }
 }
 
@@ -453,40 +335,25 @@ button {
 }
 
 .info {
-    /* TO CHANGE FOR RESPONSIVE BEHAVIOUR !!!!!!!!!!!!!!!! */
     position: absolute;
-/* 
-    right: 17rem;
-    top: 8rem; */
-    /* positioning w.r. to the top */
-    /* top: 40%;  */
     top: 7rem;
-    /* transform: translateY(-50%); */
-    /* Center vertically */
-
-    background-color: #edd058;
+    background-color: #EC6726; 
+    color: #FFFFFF;
     transition: all 0.2s ease-in-out;
-    /* padding: 0.55rem 1rem; */
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
-    /* margin-top: 1.5rem;
-    margin-left: 2rem; */
-     right: 17%; 
-
+    right: 17%; 
     display: flex;
     justify-content: center;
     align-items: center;
 
     @media (max-width: 768px) {
-        /* position: inherit; */
         position: static;
         margin-top: 0.3rem;
         margin-left: 0;
         font-size: 0.9rem;
     }
-
-    /* outline: none;*/
 }
 
 .info-bubble {
@@ -494,14 +361,11 @@ button {
     left: calc(100% + 10px);
     top: 50%;
     transform: translateY(-50%);
-    background-color: #edd058;
-    /* color: white; */
+    background-color: #EC6726;
     padding: 15px;
     border-radius: 5px;
     width: 200px;
     text-align: left;
-    /* z-index: 1000; */
-    /* font-size: 0.9rem; */
 }
 
 .info-bubble::before {
@@ -512,7 +376,7 @@ button {
     transform: translateY(-50%);
     border-width: 8px;
     border-style: solid;
-    border-color: transparent #edd058 transparent transparent;
+    border-color: transparent #EC6726 transparent transparent;
 }
 
 @media (max-width: 768px) {
@@ -526,7 +390,7 @@ button {
         left: 50%;
         top: -16px;
         transform: translateX(-50%);
-        border-color: transparent transparent #edd058 transparent;
+        border-color: transparent transparent #EC6726 transparent;
     }
 }
 
@@ -534,15 +398,15 @@ button {
 
 .ResultsImageTab {
     width: 100%;
-  }
+}
   
-  .results-collapsed-view {
+.results-collapsed-view {
     width: 100%;
     padding: 1rem;
     background-color: white;
-    border: 1px solid #2f3e6a;
+    border: 1px solid #3C3C3C;
     border-radius: 0.5rem;
-    color: #2f3e6a;
+    color: #000000;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -551,17 +415,17 @@ button {
     text-align: left;
     font-size: 1rem;
     transition: all 0.2s ease-in-out;
-  }
+}
   
-  .results-collapsed-view:hover {
-    background-color: #ced5e9;
-  }
+.results-collapsed-view:hover {
+    background-color: #E3E4E9; /* SPK-Grau 20*/ 
+}
 
-  .results-expanded-view {
+.results-expanded-view {
     position: relative; 
-    outline: 2px dashed #2f3e6a;
-    border-radius: 0.2rem;
-    background-color: #ffffff;
+    outline: 2px dashed #3C3C3C;
+    border-radius: 0.5rem;
+    background-color: #FFFFFF;
     height: 20rem;
     display: flex;
     flex-direction: column;
@@ -569,39 +433,38 @@ button {
     align-items: center;
     padding: 20px;
     transition: all 0.2s ease-in-out;
-  }
-
+}
   
 .results-expanded-view:hover{
-     background-color: #e2e8f0; 
-    /* background-color: #ced5e9; */
-    /* outline: 3px dashed #798cc3; */
-    outline: 3px dashed #1c1933;
+    background-color: #E3E4E9; /* SPK-Grau 20*/ 
+    outline: 3px dashed #000000;
 }
 
 .results-expanded-view.dragging {
-    background-color: #94a3b8;
-    /* change background when dragging */
+    background-color: #C9CCD5; /* SPK-Grau 40 */
     transition: background-color 0.15s ease-in-out;
 }
   
-  .close {
+.close {
     position: absolute;
-    top: 0.5rem;
+    top: 0.8rem;
     right: 1.5rem;
-   /*  background: none;
-    border: none; */
     font-size: 2.5rem;
-    color: #2f3e6a;
+    color: #2B4474; /* SPK-Blau 100 */
     cursor: pointer;
-   /*  padding: 0.25rem 0.5rem;
-    line-height: 1; */
   }
   
-  .close:hover {
-    /* color: #1e2743; */
-    color: #1c1933;
-  }
+.close:hover {
+    color: #182645; /* SPK-Blau 150 */
+}
+
+.DescriptionTab a {
+    color: #2B4474; /* SPK-Blau 100 */
+}
+
+.DescriptionTab a:hover {
+    color: #182645; /* SPK-Blau 150 */
+}
 
 
 
