--- a/qurator/sbb_images/webapp_react/src/styles/AboutPage.css
+++ b/qurator/sbb_images/webapp_react/src/styles/AboutPage.css
@@ -6,6 +6,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  margin-bottom: 4rem;
 }
 
 .about-content {
@@ -14,7 +15,8 @@
   flex-direction: column;
   align-items: center;
   padding-top: 5rem; 
-  padding-bottom: 4rem;
+  /* padding-bottom: 0;   */
+  margin-bottom: 3rem;  
   width: 100%;
 }
 
@@ -173,6 +175,7 @@
   justify-content: space-between;
   width: 100%;
   margin-top: 5rem;
+  /* margin-bottom: 4rem; */
 }
 
 .links a {
