minimized search bar for scrolling, timeout increased to 1500, 'search text' instead of 'sentence'

--- a/qurator/sbb_images/webapp_react/src/styles/SearchResultsPage.css
+++ b/qurator/sbb_images/webapp_react/src/styles/SearchResultsPage.css
@@ -19,7 +19,7 @@
 .query-image-container {
     background-color: #F0F0F3; /*SPK-Grau 10*/
     border-top: 1px solid #D6D8DF; /* SPK Grau 30*/
-    border-bottom: 1px solid #D6D8DF; /* SPK Grau 30*/;
+    border-bottom: 1px solid #D6D8DF; /* SPK Grau 30*/
     display: flex;
     flex-direction: column;
     justify-content: center;
