--- a/qurator/sbb_images/webapp_react/src/styles/Tabs.css
+++ b/qurator/sbb_images/webapp_react/src/styles/Tabs.css
@@ -362,10 +362,20 @@ button {
     top: 50%;
     transform: translateY(-50%);
     background-color: #EC6726;
-    padding: 15px;
+    padding: 1rem;
     border-radius: 5px;
-    width: 200px;
+    border-radius: 0.25rem;
+    /* width: 200px; */
+    /* width: auto; */
+    width: 12rem;
     text-align: left;
+    /* Text styling */
+    color: white;                
+    font-size: 0.9rem;           
+    font-weight: 500;            
+    line-height: 1.5;            
+    letter-spacing: 0.01em;      
+    font-family: "Noto Sans", sans-serif;  
 }
 
 .info-bubble::before {
@@ -465,7 +475,3 @@ button {
 .DescriptionTab a:hover {
     color: #182645; /* SPK-Blau 150 */
 }
-
-
-
-  
