--- a/qurator/sbb_images/webapp_react/src/styles/Tabs.css
+++ b/qurator/sbb_images/webapp_react/src/styles/Tabs.css
@@ -80,6 +80,8 @@ ul.nav {
     justify-content: space-around;
     align-items: center;
     transition: all 0.2s ease-in-out;
+    cursor: copy;
+    padding: 1.5rem;
 }
 
 .ImageTab:hover{
@@ -90,8 +92,14 @@ ul.nav {
 .ImageTab.dragging {
     background-color: #C9CCD5; /* SPK-Grau 40 */
     transition: background-color 0.15s ease-in-out;
+    cursor: grabbing;
 }
 
+/* .ImageTab:focus {
+    outline: none; 
+    background-color: #f0f0f5; 
+  }
+ */
 
 .drag-area {
     flex: 2;
@@ -206,6 +214,7 @@ ul.nav {
 .error-message {
     color: #D20A11; /* Verkehrsrot = UDL-Signalrot */
     text-align: left; 
+    font-weight: 600;
   }
 
 ul.nav {
@@ -441,8 +450,10 @@ button {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 20px;
+    /* padding: 20px; */
+    padding: 1.5rem;
     transition: all 0.2s ease-in-out;
+    cursor: copy;
 }
   
 .results-expanded-view:hover{
@@ -453,6 +464,7 @@ button {
 .results-expanded-view.dragging {
     background-color: #C9CCD5; /* SPK-Grau 40 */
     transition: background-color 0.15s ease-in-out;
+    cursor: grabbing;
 }
   
 .close {
@@ -504,6 +516,8 @@ button {
   
 .suggestion-item:hover {
     background-color: #F0F0F3;
+    /* border-top: 1px solid #D6D8DF;
+    border-bottom: 1px solid #D6D8DF; */
 }
   
 .try-it {
@@ -527,7 +541,13 @@ button {
     padding: 0.95rem 1rem;
     font-weight: 600;
     color: #3C3C3C;
-    background-color: #F0F0F3;
+    /* background-color: #F0F0F3; */
     background-color: #E8E8F1;
     border-bottom: 1px solid #D6D8DF;
 }
+
+.paste-hint {
+    color: #67717E;
+    margin-top: 0.5rem;
+    text-align: center;
+  }
