--- a/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
+++ b/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
@@ -3,13 +3,12 @@
     top: 5rem; /* leave space for the existing header */
     left: 0;
     width: 100%;
-    background-color: #F0F0F3;
+    /* background-color: #F0F0F3; */
     background-color: #E8E8F1;
-
     border-top: 1px solid #EC6726;
     border-bottom: 1px solid #D6D8DF;/* SPK Grau 30*/
     z-index: 5; /* same as header */
-    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.25);
   }
 
   .min-content-container{
@@ -93,9 +92,9 @@
   }
   
   .preview-image {
-    max-width: 100%;
+    /* max-width: 100%; */
     max-width: 18rem;
-    max-height: 300px;
+    /* max-height: 300px; */
     max-height: 18rem;
     display: block;
   }
