--- a/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
+++ b/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
@@ -8,7 +8,7 @@
     border-top: 1px solid #EC6726;
     border-bottom: 1px solid #D6D8DF;/* SPK Grau 30*/
     z-index: 5; /* same as header */
-    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
   }
 
   .min-content-container{
@@ -74,9 +74,10 @@
   .thumbnail-preview {
     position: fixed;
     top: calc(6rem + 4rem); /* just below the bar */
-    left: 10%; 
+    /* left: 10%;  */
     left: calc((100% - 80%) / 2);
-    max-width: 25rem;
+    /* max-width: 25rem; */
+    max-width: 20vw;
     background: rgba(255, 255, 255, 0.90);
     /* border: 1px solid #B5B9C4; */
     border: 1px solid #D6D8DF;
@@ -84,18 +85,31 @@
     box-shadow: 0 0.375rem 1rem rgba(0, 0, 0, 0.6);
     padding: 2rem;
     z-index: 10;
+    cursor: grab;
+  }
+
+  .thumbnail-preview.dragging {
+    cursor: grabbing;
+    opacity: 0.9;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.3);
   }
   
   .preview-image-container {
     position: relative; 
     overflow: hidden;
+    max-width: 40vw; 
+    max-height: 40vh; 
+    margin: 0 auto;
   }
   
   .preview-image {
-    /* max-width: 100%; */
-    max-width: 18rem;
-    /* max-height: 300px; */
-    max-height: 18rem;
+   /*  max-width: 18rem;
+    max-height: 18rem; */
+    width: auto; 
+    height: auto; 
+    max-width: 100%; 
+    max-height: 40vh; 
+    object-fit: contain;
     display: block;
   }
   
