--- a/qurator/sbb_images/webapp_react/src/styles/Tabs.css
+++ b/qurator/sbb_images/webapp_react/src/styles/Tabs.css
@@ -494,6 +494,46 @@ button {
     left: 0;
     width: 100%;
     height: auto;
+    height: 500px;
+    height: 34rem;
+    background: #FFFFFF;
+    border: 1px solid #D6D8DF;
+    /* border: 1px solid #000000; */
+    border-top: none;
+    border-radius: 0 0 0.5rem 0.5rem;
+    /* max-height: 200px; */
+    overflow-y: auto;
+    z-index: 10;
+    box-shadow: 0 0.4rem 0.2rem rgba(0,0,0,0.25);
+}
+
+/*For Firefox*/
+ .suggestions-dropdown {
+    scrollbar-width: auto;
+    scrollbar-color: rgba(43, 68, 116, 0.6) #F0F0F3;
+  }  
+
+/*For all other browsers*/
+.suggestions-dropdown::-webkit-scrollbar{
+    width: 0.7rem;
+    border-radius: 0.5rem;
+    background-color: #F0F0F3;
+}
+
+
+.suggestions-dropdown::-webkit-scrollbar-thumb{
+    background: rgba(43, 68, 116, 0.6); 
+    border-radius: 0.5rem;
+}
+
+.suggestions-dropdown-ppn {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: auto;
+   /*  height: 500px;
+    height: 34rem; */
     background: #FFFFFF;
     border: 1px solid #D6D8DF;
     /* border: 1px solid #000000; */
