close icon changed to work in all browsers

--- a/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
+++ b/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
@@ -136,6 +136,10 @@
     font-size: 2rem;
   }
 
+   .close-icon {
+    fill: #FFFFFF; 
+  } 
+
   .close-preview:hover{
     background-color: #182645;
   }
