button t share search results, minor changes for Firefox

--- a/qurator/sbb_images/webapp_react/src/styles/HelpModal.css
+++ b/qurator/sbb_images/webapp_react/src/styles/HelpModal.css
@@ -34,7 +34,8 @@
   .divider {
     width: 100%;
     height: 1px;
-    background-color: #D6D8DF; /*SPK-Grau 30 */
+    /* background-color: #D6D8DF; SPK-Grau 30 */
+    background-color: #EC6726;
   }
   
   .modal-body-container {
