--- a/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
+++ b/qurator/sbb_images/webapp_react/src/styles/MinimizedSearchBar.css
@@ -58,13 +58,15 @@
   }
   
   .back-to-top-button {
-    padding: 0.6rem 1.2rem;
+    /* padding: 0.6rem 1.2rem; */
+    padding: 0.5rem 1rem;
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
     background-color: #2B4474; /* SPK-Blau 100 */
     color: white;
-    font-size: 0.95rem;
+    /* font-size: 0.95rem;  */
+    font-size: 1rem;
   }
   
   .back-to-top-button:hover {
