--- a/qurator/sbb_images/webapp_react/src/styles.css
+++ b/qurator/sbb_images/webapp_react/src/styles.css
@@ -23,3 +23,197 @@ body {
     margin-top: 5rem;
     margin-bottom: 4rem;
 }
+
+
+/* Common Card Styles */
+
+/* .image-card, .result-card { */
+.card {
+    border: 1px solid #D6D8DF; /* SPK Grau 30*/
+    border-radius: 0.3em;
+    display: grid;
+    grid-template-rows: auto auto auto;
+    width: 100%;
+    max-width: 450px;
+    gap: 1em;
+    padding-bottom: 1em;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  /* .image-card:hover, .result-card:hover { */
+  .card:hover{
+    border: 1px solid #000000;
+  }
+  
+  .card-image-container {
+    grid-row: 1;
+    background-color: #F0F0F3; /* SPK-Grau 10*/
+    border-radius: 0.3em 0.3em 0 0;
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+  }
+  
+  /* .image-card:hover .image-container,  */
+  .card:hover .card-image-container {
+    background-color: #E3E4E9; /* SPK-Grau 20*/
+  }
+  
+  .card-image {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  /* .view-link, .image-card a { */
+  .card-title-link{
+    padding: 0.5em 0.5em;
+    color: #2B4474; /* SPK-Blau 100 */
+    margin: auto;
+    font-size: 1rem;
+    line-height: 1.5;
+    /* text-decoration: none; */
+    display: block;
+    position: relative;
+  }
+  
+  /* .view-link:hover, .image-card a:hover { */
+  .card-title-link:hover{
+    color: #182645; /* SPK-Blau 150 */
+  }
+  
+  /* title wrapper - for consistent title display with truncation */
+  .card-title-wrapper {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-height: 1.5rem;
+    height: 3rem;
+    padding: 0 0.7rem; 
+    text-align: left;
+  }
+  
+  [data-title] {
+    position: relative;
+  }
+  
+   /* [data-title]:hover::after {  */
+   /*  .result-card .view-link[data-title]:hover::after,
+    .image-card a[data-title]:hover::after{  */
+    .card-title-link[data-title]:hover::after{
+    content: attr(data-title);
+    position: absolute;
+    left: 50%;
+    bottom: 100%;
+    transform: translateX(-50%);
+    background-color: #FFFFFF;
+    /* background-color: #E2E2F2; */
+    color: #000000;
+    border: 1px solid #D6D8DF;
+    border-radius: 0.25rem;
+    padding: 1rem;
+    z-index: 10;
+    width: max-content;
+    max-width: 300px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0.375rem 1rem rgba(0, 0, 0, 1);  */
+    text-align: left;
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+    white-space: normal;
+  }
+
+ 
+   .card-title-link[data-title]:hover::after {
+    content: attr(data-title);
+    position: absolute;
+    left: 50%;
+    bottom: 100%;
+    transform: translateX(-50%);
+    background-color: #E2E2F2;
+    color: #000000;
+    border: 1px solid #D6D8DF;
+    /* border: 1px solid #000000; */
+    border-radius: 0.25rem;
+    padding: 1rem;
+    z-index: 10;
+    width: max-content;
+    max-width: 300px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.375rem 1rem rgba(0, 0, 0, 1);
+    text-align: left;
+    font-size: 0.9rem;
+    margin-bottom: 8px; 
+    white-space: normal;
+  } 
+  
+  /* Add this new rule for the triangle */
+  .card-title-link[data-title]:hover::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: calc(100% - 8px); /* Position it at the bottom of the tooltip */
+    transform: translateX(-50%);
+    border-width: 8px;
+    border-style: solid;
+    border-color: #E2E2F2 transparent transparent transparent; /* Triangle pointing DOWN */
+    z-index: 10;
+  }
+
+
+/* .title-wrapper {
+    height: 3rem;
+    line-height: 1.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    padding: 0 0.7rem;
+  }
+  
+  .title-link {
+    text-decoration: none;
+    color: #2B4474;
+    display: block;
+  }
+  
+  .title-link:hover {
+    color: #182645;
+  }
+  
+  [data-title] {
+    position: relative;
+  }
+  
+  [data-title]:hover::after {
+    content: attr(data-title);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 100%;
+    background-color: #FFFFFF;
+    color: #000000;
+    border: 1px solid #D6D8DF;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    z-index: 10;
+    width: max-content;
+    max-width: 300px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+    white-space: normal;
+  } */
