--- a/qurator/sbb_images/webapp_react/src/styles/RandomImages.css
+++ b/qurator/sbb_images/webapp_react/src/styles/RandomImages.css
@@ -7,8 +7,8 @@
     margin-top: 5em;
   }
   
-.image-card {
-  border: 1px solid #D6D8DF; /* SPK Grau 30*/
+/* .image-card {
+  border: 1px solid #D6D8DF; 
   border-radius: 0.3em;
   display: grid;
   grid-template-rows: auto auto auto; 
@@ -25,7 +25,7 @@
   
 .image-container {
   grid-row: 1;
-  background-color: #F0F0F3; /* SPK-Grau 10*/
+  background-color: #F0F0F3; 
   border-radius: 0.3em 0.3em 0 0;
   max-width: 100%;
   max-height: 100%;
@@ -38,7 +38,7 @@
 }
   
 .image-card:hover .image-container {
-  background-color: #E3E4E9; /* SPK-Grau 20*/
+  background-color: #E3E4E9; 
 }
   
 .image-container .card-image {
@@ -55,10 +55,10 @@
   height: 3.6em;
   height: 3rem;
   line-height: 1.5rem;
-  overflow: hidden; /* prevent the title from pushing the button down*/
+  overflow: hidden; 
   margin: 0 auto;
   padding: 0 0.7em 0 0.7em;
-  text-align: left; /* Check this! */
+  text-align: left; 
 }
   
 .image-card a {
@@ -67,7 +67,7 @@
 
 .image-card a:hover {
   color: #182645;
-} 
+}  */
 
   /* .image-card a:visited {
     color: #42455E;
@@ -83,5 +83,42 @@
 .image-grid {
   margin-top: 0; 
   margin-bottom: 3rem;  
+}
+
+.title-wrapper {
+  height: 3rem;         /* 2 lines */
+  line-height: 1.5rem;  
+  overflow: hidden;     
+  text-overflow: ellipsis; /* ellipsis for overflow */
+  display: -webkit-box;  /* for multi-line ellipsis */
+  -webkit-line-clamp: 2; /* limit to 2 lines */
+  -webkit-box-orient: vertical;
+}
+
+/* Tooltip styles */
+a[data-title] {
+  position: relative;
+}
+
+a[data-title]:hover::after {
+  content: attr(data-title);
+  position: absolute;
+  left: 50%;
+  bottom: 100%;
+  transform: translateX(-50%);
+  background-color: #FFFFFF;
+  color: #000000;
+  border: 1px solid #D6D8DF;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  padding: 1rem;
+  z-index: 10;
+  width: max-content;
+  max-width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  font-size: 0.9rem;
+  margin-bottom: 0.5rem;
+  white-space: normal;
 }
   
