--- a/qurator/sbb_images/webapp_react/src/styles/SearchResultsPage.css
+++ b/qurator/sbb_images/webapp_react/src/styles/SearchResultsPage.css
@@ -57,8 +57,8 @@
   }
 
 
-  .result-card {
-    border: 1px solid #D6D8DF; /* SPK Grau 30*/
+    .result-card { 
+    border: 1px solid #D6D8DF; 
     border-radius: 0.3em;
     display: grid;
     grid-template-rows: auto auto auto;
@@ -70,9 +70,9 @@
 
   }
   
-  .result-card .image-container {
+   .result-card .image-container { 
     grid-row: 1;
-    background-color: #F0F0F3; /* SPK-Grau 10*/
+    background-color: #F0F0F3; 
     border-radius: 0.3em 0.3em 0 0;
     max-width: 100%;
     max-height: 100%;
@@ -82,7 +82,7 @@
     justify-content: center;
     align-items: center;
     padding: 0.5rem;
-  }
+  } 
 
   .card-image-wrapper {
     position: relative; /* to center the loading dots */
@@ -93,36 +93,35 @@
     align-items: center;
   }
 
-  .card-image {
+   .card-image {
     max-width: 100%;
     max-height: 100%;
     height: auto;
     object-fit: contain;
     display: block;
     margin: 0 auto;
-  }
+  } 
 
   .card-image.not-loaded {
     /* display: none;  */ /*conflict between display:none and lazy load*/
     visibility: hidden; /* to center the loading dots */
   }
   
-  .result-card .view-link {
+    .result-card .view-link { 
     padding: 0.5em 0.5em;
-    color: #2B4474; /* SPK-Blau 100 */
+    color: #2B4474; 
     margin: auto;
     font-size: 1rem;
     line-height: 1.5;
-  }
+  } 
   
-  .result-card:hover {
+    .result-card:hover { 
     border: 1px solid #000000;
-    /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3); */
   }
 
-  .result-card:hover .image-container {
-    background-color: #E3E4E9; /* SPK-Grau 20*/
-  }
+   .result-card:hover .image-container { 
+    background-color: #E3E4E9; 
+  } 
   
   /* .search-results-container {
     
@@ -288,4 +287,29 @@
 .results-heading a:hover{
   color: #182645;
 }
-  
+
+.view-link {
+  position: relative;
+}
+
+.view-link[data-title]:hover::after {
+  content: attr(data-title);
+  position: absolute;
+  left: 50%;
+  bottom: 100%;
+  transform: translateX(-50%);
+  background-color: #FFFFFF;
+  color: #000000;
+  border: 1px solid #D6D8DF;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  padding: 1rem;
+  z-index: 10;
+  width: max-content;
+  max-width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  font-size: 0.9rem;
+  margin-bottom: 0.5rem;
+  white-space: normal;
+}
